fix: serach_bar result design, the scrollbar overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -220,11 +220,16 @@
   position: absolute;
   z-index: 1000;
   max-height: 100%;
-  min-width: 100%;
+  min-width: 100%; 
+  padding-left: 2%; 
   overflow: scroll;
-  padding-left: 2%;
-  padding-right: 2%;
-  background-color: rgba(255,255,255,0.7);
+ 
+
+  background-color: rgba(255,255,255,0.95);
+}
+
+.search_bar_results_parent{
+  position: relative;
 }
 
 .mdl-card {
